fix wrong width of landing page

--- a/assets/source/setup-guide/app/style.scss
+++ b/assets/source/setup-guide/app/style.scss
@@ -360,6 +360,8 @@ $root: ".woocommerce-setup-guide";
 }
 
 .pin4wc-landing-page {
+	max-width: 824px;
+	margin: 0 auto;
 
 	&__welcome-section {
 
